# DeepresearchAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
deepresearch/: __init__.py  cli.py  config.py  graph.py  llm.py  logging.py  output.py  prompts.py  state.py  tools.py
deepresearch/checkpoint/: __init__.py  manager.py
deepresearch/citation/: __init__.py  extractor.py  formatter.py
deepresearch/evidence/: __init__.py  cross_validate.py  dedup.py  ranking.py
deepresearch/nodes/: __init__.py  critique.py  final.py  human_review.py  merge.py  plan.py  research.py  research_agent.py  summary.py
deepresearch/observability/: __init__.py  callbacks.py  metrics.py  otel.py  otel_callback.py
deepresearch/streaming/: __init__.py  renderer.py
docs/: 01_v0_technical_route.md  02_langgraph_architecture.md  05_prompts.md  07_resume_packaging.md  08_roadmap.md  index.md
docs/ai/: 06_claude_code_execution_plan.md  coding-rules.md  context-map.md  review-checklist.md  v0_execution_plan.md
docs/architecture/: 03_deepseek_compatibility.md  04_state_schema.md  module-boundaries.md  overview.md  v2.1-multi-agent.md
docs/design/: 00_project_overview.md  01_v0_technical_route.md  technical-route.md
docs/fixs/: fix.md
docs/specs/: v0-mvp.md  v1-quality-and-infra.md  v2-web-application-plan.md  v2-web-application.md  v2.1-hitl-completion.md
docs/superpowers/plans/: 2026-06-12-v0-mvp.md  2026-06-13-v1-quality-and-infra.md  2026-06-15-v2.1-implementation.md
docs/superpowers/specs/: 2026-06-15-v2.1-multi-agent-design.md  2026-06-15-v2.1-tradeoff-analysis.md
docs/testing/: tdd-guide.md  test-data.md  testing-strategy.md
docs/workflows/: README.md
scripts/: dev-pr.ps1
server/: __init__.py  routes.py  stream.py  tasks.py
tests/: conftest.py  test_cli.py
tests/fixtures/: mock_llm.py
tests/integration/: test_web_workflow.py  test_workflow.py
tests/unit/: test_checkpoint_manager.py  test_citation_extractor.py  test_citation_formatter.py  test_cli.py  test_config.py  test_critique_node.py  test_cross_validate.py  test_evidence_dedup.py  test_evidence_ranking.py  test_final_node.py  test_graph.py  test_human_review.py  test_llm.py  test_logging.py  test_merge_node.py  test_observability.py  test_otel.py  test_output.py  test_plan_node.py  test_prompts.py  test_research_agent.py  test_research_node.py  test_server_routes.py  test_server_tasks.py  test_state.py  test_streaming_renderer.py  test_summary_node.py  test_tools.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  router.js  style.css
web/src/api/: index.js
web/src/components/: CritiqueDashboard.vue  EvidenceList.vue  FinalReport.vue  PlanCard.vue  ProgressPanel.vue  ReviewPanel.vue  SourcesTable.vue  TaskDetail.vue  TaskForm.vue  TaskList.vue
(+11 files in other folders)
