[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "A LangGraph-based DeepResearch Agent powered by DeepSeek API"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-deepseek",
    "typer",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "ddgs",
    "duckduckgo-search",
    "trafilatura",
    "beautifulsoup4",
    "httpx",
    "rich",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "deepresearch-agent[otel]",
]

[project.scripts]
deepresearch = "deepresearch.cli:app"

[tool.setuptools.packages.find]
include = ["deepresearch*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
